# omnicontext

./: .dockerignore  .gitattributes  .gitignore  .markdownlint.json  CHANGELOG.md  CLAUDE.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  INSTALL.md  INSTALLATION_COMPLETE.md  LICENSE  OMNICONTEXT_VISION_AND_ROADMAP.md  PROGRAMMATIC_MCP_SUMMARY.md  README.md  assets.json  audit.toml  cliff.toml  deny.toml  out.json  rustfmt.toml  test_parser.ps1
.agents/: persona.md  rules.md
.agents/workflows/: add-language.md  build.md  debug-search.md  mcp-testing.md  release.md  scaffold-crate.md
.githooks/: README.md  pre-commit  pre-push
.github/: WORKFLOWS.md
.github/workflows/: auto-release.yml  benchmark.yml  ci.yml  release.yml  security.yml
.kiro/settings/: mcp.json
.kiro/steering/: competitive-advantage.md  product.md  project-organization.md  structure.md  tech.md
crates/omni-cli/: Cargo.toml
crates/omni-cli/src/: main.rs  orchestrator.rs
crates/omni-core/: Cargo.toml
crates/omni-core/benches/: README.md  core_benchmarks.rs
crates/omni-core/src/: branch_diff.rs  commits.rs  config.rs  error.rs  lib.rs  memory.rs  patterns.rs  plan_auditor.rs  rules.rs  scip.rs  server.rs  types.rs  workspace.rs
crates/omni-core/src/chunker/: contextual.rs  mod.rs  token_counter.rs
crates/omni-core/src/embedder/: batching.rs  cloud.rs  contrastive.rs  mod.rs  model_manager.rs  quantization.rs  session_pool.rs
crates/omni-core/src/graph/: attention.rs  community.rs  coverage.rs  data_flow.rs  dependencies.rs  edge_extractor.rs  historical.rs  mod.rs  queries.rs  reasoning.rs
crates/omni-core/src/index/: mod.rs  pool.rs  schema.sql
crates/omni-core/src/parser/: mod.rs  registry.rs
crates/omni-core/src/parser/languages/: c.rs  cpp.rs  csharp.rs  css.rs  document.rs  go.rs  java.rs  javascript.rs  kotlin.rs  mod.rs  php.rs  python.rs  ruby.rs  rust.rs  swift.rs  typescript.rs
crates/omni-core/src/pipeline/: mod.rs
crates/omni-core/src/reranker/: mod.rs
crates/omni-core/src/resilience/: circuit_breaker.rs  health_monitor.rs  mod.rs
crates/omni-core/src/search/: cache.rs  chunk_dedup.rs  context_assembler.rs  context_formatter.rs  feedback.rs  hyde.rs  intent.rs  mod.rs  pack.rs  synonyms.rs
crates/omni-core/src/vector/: hnsw.rs  mod.rs
crates/omni-core/src/watcher/: hash_cache.rs  mod.rs
crates/omni-core/tests/: gar_integration.rs  search_quality_bench.rs
crates/omni-core/tests/bench/: golden_queries.json
crates/omni-core/tests/fixtures/: eval_queries.json
crates/omni-daemon/: Cargo.toml
crates/omni-daemon/src/: backpressure.rs  compression.rs  event_dedup.rs  ipc.rs  main.rs  metrics.rs  prefetch.rs  process_guard.rs  protocol.rs
crates/omni-ffi/: Cargo.toml
crates/omni-ffi/src/: lib.rs
crates/omni-mcp/: Cargo.toml
crates/omni-mcp/src/: main.rs  tools.rs
crates/omni-mcp/src/transport/: mod.rs  sse.rs
crates/omni-mcp/tests/: tool_integration.rs
distribution/: README.md  install.ps1  install.sh  uninstall.ps1  uninstall.sh  update.ps1  update.sh
distribution/homebrew/: omnicontext.rb
distribution/install/: install.ps1  install.sh
distribution/scoop/: omnicontext.json
distribution/winget/: omnicontext.yaml
docs/: ADR.md  CONCURRENCY_ARCHITECTURE.md  DEVELOPMENT_ROADMAP.md  EMBEDDING_COVERAGE_FIX.md  EMBEDDING_MODEL_EVALUATION.md  ENTERPRISE_STRATEGY.md  ERROR_RECOVERY.md  GRAPH_LOADING_FIX.md  INVESTOR_PITCH_DECK.md  MODEL_RESEARCH_2026.md  OMNICONTEXT_PRODUCT_SPEC.md  OMNICONTEXT_V3_RESEARCH_AND_UPGRADE_SPEC.md  PHASE_0_CHECKLIST.md  PHASE_A_COMPLETE.md  PROGRESS_SUMMARY.md  README.md  TESTING_STRATEGY.md  UNIFIED_MODEL_ARCHITECTURE.md  commercial-license.md  index.md  omnicontext_v3_advanced_research.md  project-status.md  roadmap.md
docs/api/: README.md
docs/api-reference/: mcp-tools.md  overview.md
docs/architecture/: ADR.md  SECURITY_THREAT_MODEL.md  SYSTEM_ARCHITECTURE.md  concurrency.md  feature-audit.md  intelligence.md  security-threat-model.md  vscode-extension.md
docs/contributing/: overview.md  testing.md
docs/development/: sidebar-ux-reliability-planner.md  testing-strategy.md
docs/fixes_logs/: DISTRIBUTION_FIXES.md  PHASE0_COMPLETE.md  PHASE0_IMPLEMENTATION.md  PHASE1_COMPLETE.md  PHASE1_PLAN.md  PHASE2_FINAL_COMPLETE.md  PHASE2_PLAN.md  PHASE2_PROGRESS_UPDATE.md  PHASE2_REMAINING_TASKS_PLAN.md  PHASE2_STATUS.md  PHASE2_TASKS_4_5_COMPLETE.md  PHASE2_TASKS_COMPLETE.md  PHASE3_COMPLETE.md  PHASE3_FINAL_COMPLETE.md  PHASE3_PLAN.md  PHASE3_PROGRESS.md  PHASE3_STATUS.md  PHASE3_TASK2_COMPLETE.md  PHASE4_BENCHMARK_CONSOLIDATION.md  PHASE4_PLAN.md  PHASE4_STATUS.md  PHASE4_SUMMARY.md  PHASE4_TASK1_COMPLETE.md  PHASE4_TASK2_PLAN.md
docs/getting-started/: installation.md  quickstart.md
docs/guides/: CONVENTIONAL_COMMITS.md  DISTRIBUTION.md  SUPPORTED_LANGUAGES.md  installation-testing.md  installation-workflow.md  supported-languages.md
docs/planning/: CURRENT_STATE.md  omnicontext_upgrade_plan.md
docs/reference/: supported-languages.md
docs/research/: context-engine-2026.md  tech-stack-2026.md
docs/user-guide/: features.md
editors/vscode/: .vscodeignore  CHANGELOG.md  README.md  TESTING.md  package-lock.json  package.json  tsconfig.json
scripts/: IMPLEMENTATION_GUIDE.md  README.md  bump-version.ps1  bump-version.sh  fix-index-pool-v2.py  fix-index-pool.py  fix-multiline-conn.py  fix-onnx-runtime.ps1  full-reindex.ps1  install-mcp-quick.ps1  install-mcp.ps1  kiro_integration_example.md  mcp_tool_by_tool_audit.py  omnicontext_wrapper.py  omnicontext_wrapper.ts  package.json  setup-dev.ps1  setup-dev.sh  test-mcp-protocol.py  test-mcp.ps1  test_all_mcp_tools.py  test_mcp.py  update-index-pool.sh  update-mcp-locks.py
tests/: mcp_init.json  test_mcp.py
tests/bench/: golden_queries.json  mod.rs
website/: package-lock.json  package.json  tailwind.config.js
website/docs/: DOCS_PLAN.md  architecture.md  configuration.md  contributing.md  enterprise.md  get-started.md  index.md  installation.md  introduction.md  mcp-server-setup.md  mcp-tools.md  pricing.md  quick-start.md  (+2 more)
(+59 files in other folders)
