[package]
name = "omni-cli"
description = "Command-line interface for OmniContext code context engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[[bin]]
name = "omnicontext"
path = "src/main.rs"

[dependencies]
# Core engine
omni-core = { path = "../omni-core" }

# Async
tokio = { workspace = true }

# Serialization
serde_json = { workspace = true }

# Errors
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# CLI
clap = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/omnicontext-{ version }-{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"
