[package]
name = "omni-core"
description = "Core indexing, search, and code intelligence engine for OmniContext"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
# Async
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }

# Errors
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Database
rusqlite = { workspace = true }

# AST parsing
tree-sitter = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-javascript = { workspace = true }
tree-sitter-go = { workspace = true }

# Embedding
ort = { workspace = true }
tokenizers = { workspace = true }

# Vector index (deferred to Phase 1 evaluation)
# usearch = { workspace = true }

# File watching
notify = { workspace = true }
notify-debouncer-mini = { workspace = true }

# Git
gix = { workspace = true }

# Graph
petgraph = { workspace = true }

# Concurrency
dashmap = { workspace = true }

# Configuration
toml = { workspace = true }
dirs = { workspace = true }

# Hashing
sha2 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
