[package]
name = "omni-core"
description = "Core indexing, search, and code intelligence engine for OmniContext"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
# Async
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }

# Errors
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Database
rusqlite = { workspace = true }

# AST parsing
tree-sitter = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-javascript = { workspace = true }
tree-sitter-go = { workspace = true }
tree-sitter-java = { workspace = true }
tree-sitter-c = { workspace = true }
tree-sitter-cpp = { workspace = true }
tree-sitter-c-sharp = { workspace = true }
tree-sitter-css = { workspace = true }
tree-sitter-md = { workspace = true }
tree-sitter-ruby = { workspace = true }
tree-sitter-php = { workspace = true }
tree-sitter-swift = { workspace = true }
tree-sitter-kotlin-ng = { workspace = true }

# Embedding
ort = { workspace = true }
tokenizers = { workspace = true }

# Vector index (deferred to Phase 1 evaluation)
# usearch = { workspace = true }

# File watching
notify = { workspace = true }
notify-debouncer-mini = { workspace = true }

# Git
gix = { workspace = true }

# Graph
petgraph = { workspace = true }

# Concurrency
dashmap = { workspace = true }
lru = { workspace = true }
parking_lot = { workspace = true }

# Configuration
toml = { workspace = true }
dirs = { workspace = true }

# Hashing
sha2 = { workspace = true }
hex = { workspace = true }
# Fast non-cryptographic hashing for change detection (~40x faster than SHA-256)
xxhash-rust = { workspace = true }

# CPU-bound parallel file parsing (P3.2)
rayon = { workspace = true }

# HTTP downloads (model auto-download)
reqwest = { workspace = true }
indicatif = { workspace = true }

# Glob pattern matching (search_with_filter path_glob)
globset = { workspace = true }

# Compression
lz4 = { workspace = true }

[features]
## NVIDIA CUDA GPU acceleration for ONNX inference.
## Requires CUDA toolkit ≥11.8 and cuDNN ≥8.6 on the target machine.
## Activate with: cargo build --features cuda
cuda = ["ort/cuda"]

## Apple CoreML execution provider (macOS/iOS).
## Delegates to Apple Neural Engine or GPU on Apple Silicon.
## Activate with: cargo build --features coreml
coreml = ["ort/coreml"]

## Windows DirectML execution provider (any GPU with D3D12 support).
## Works with AMD, Intel, and NVIDIA GPUs on Windows.
## Activate with: cargo build --features directml
directml = ["ort/directml"]

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bin]]
name = "eval"
path = "src/bin/eval.rs"

[[bin]]
name = "benchmark"
path = "src/bin/benchmark.rs"

[[bench]]
name = "core_benchmarks"
harness = false

[lints]
workspace = true
