[package]
name = "omni-daemon"
description = "Background daemon for OmniContext -- persistent engine with IPC interface"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[[bin]]
name = "omnicontext-daemon"
path = "src/main.rs"

[dependencies]
# Core engine
omni-core = { path = "../omni-core" }

# Async
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Errors
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# CLI args
clap = { workspace = true }

# Caching
lru = { workspace = true }

# Concurrency
parking_lot = { workspace = true }
tokio-util = { workspace = true }
lz4 = { workspace = true }

# Hashing (for pipe name derivation)
sha2 = { workspace = true }
hex = { workspace = true }

# Process guard — platform-specific OS APIs
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Console",
] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
