[package]
name = "omni-mcp"
description = "MCP server for OmniContext -- exposes code intelligence tools to AI agents"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[[bin]]
name = "omnicontext-mcp"
path = "src/main.rs"

[dependencies]
# Core engine
omni-core = { path = "../omni-core" }

# MCP SDK
rmcp = { workspace = true }
schemars = { workspace = true }

# Async
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Errors
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# CLI args
clap = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
