[package]
name = "omni-mcp"
description = "MCP server for OmniContext -- exposes code intelligence tools to AI agents"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[features]
# HTTP SSE transport for remote/enterprise MCP deployments.
# Always compiled (axum, uuid are unconditional deps), but the feature flag
# allows conditional compilation of the SSE match arm in main.rs.
sse = []

[[bin]]
name = "omnicontext-mcp"
path = "src/main.rs"

[dependencies]
# Core engine
omni-core = { path = "../omni-core" }

# MCP SDK
rmcp = { workspace = true }
schemars = { workspace = true }

# Async
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures-util = { workspace = true }

# HTTP SSE transport
axum = { workspace = true }
uuid = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Errors
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# CLI args
clap = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
# tower ServiceExt for axum oneshot() in integration tests
tower = { version = "0.5", features = ["util"] }

[lints]
workspace = true
